--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -93,6 +93,21 @@ a {
   text-decoration: none;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $primary; 
+}
+
 /* Make clicks pass-through */
 #nprogress {
   pointer-events: none;
@@ -119,6 +134,12 @@ a {
 }
 
 body.dark {
+  &::-webkit-scrollbar-thumb {
+    background: $light; 
+  }
+  &::-webkit-scrollbar-track {
+    background: $primary; 
+  }
   .page__lines {
     mask-image: linear-gradient(to top, transparent, $light, $light);
     -webkit-mask-image: linear-gradient(to top, transparent, $light, $light);
