--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -2,8 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
   position: absolute;
+  //backdrop-filter: blur(10px);
   top: 1rem;
+  //padding: 1rem 2rem;
   left: 50%;
   transform: translateX(-50%);
   z-index: 6;
