--- a/styles/pages/experience.scss
+++ b/styles/pages/experience.scss
@@ -54,23 +54,39 @@
       flex-direction: column;
       gap: 2rem;
       .card {
+        position: relative;
         display: flex;
         justify-content: flex-start;
         flex-direction: column;
+        padding-bottom: 1rem;
+        //background: #000;
         &-header {
           display: flex;
           align-items: flex-start;
           justify-content: space-between;
           gap: 1rem;
           flex-wrap: wrap;
+          @media screen and (max-width: 440px) {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: .75rem;
+          }
           &__left {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             gap: 0.25rem;
             h3 {
+              font-size: 1.25rem;
+              font-weight: 700;
+              color: $primary;
+              font-family: $font-primary;
+              text-transform: uppercase;
             }
             p {
+              font-size: 1rem;
+              font-weight: 500;
+              color: $primary;
             }
           }
           &__right {
@@ -78,15 +94,32 @@
             flex-direction: column;
             align-items: flex-end;
             gap: 0.25rem;
+            @media screen and (max-width: 440px) {
+              width: 100%;
+              flex-direction: column;
+              align-items: flex-start;
+              // align-items: flex-end;
+            }
             h3 {
+              font-size: 1rem;
+              font-weight: 700;
+              color: $primary;
+              opacity: .75;
+              font-family: $font-secondary;
             }
             p {
+              font-family: $font-secondary;
             }
           }
         }
         &-description {
-          padding: 1rem 0 .5rem 0;
+          padding: 1rem 0 0.5rem 0;
           p {
+            font-size: 1rem;
+            font-weight: 400;
+            color: $primary;
+            opacity: 0.75;
+            font-family: $font-primary;
           }
         }
         &-footer {
@@ -130,6 +163,18 @@
                 transform: scaleX(1);
               }
             }
+          }
+        }
+        &:is(:not(:last-child)) {
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            height: 1px;
+            background: rgba($color: $primary, $alpha: 0.25);
           }
         }
       }
@@ -313,7 +358,8 @@
 body.dark {
   .experience {
     background: $primary;
-    &-works, &-intership {
+    &-works,
+    &-intership {
       &__title {
         border-color: $light;
         h2 {
@@ -323,7 +369,8 @@ body.dark {
       &__cards {
         .card {
           &-header {
-            h3, p {
+            h3,
+            p {
               color: $light;
             }
           }
@@ -338,6 +385,11 @@ body.dark {
               &::after {
                 background: $light;
               }
+            }
+          }
+          &:is(:not(:last-child)) {
+            &::after {
+              background: rgba($color: $light, $alpha: 0.25);
             }
           }
         }
