--- a/styles/pages/experience.scss
+++ b/styles/pages/experience.scss
@@ -69,7 +69,7 @@
           @media screen and (max-width: 440px) {
             flex-direction: column;
             align-items: flex-start;
-            gap: .75rem;
+            gap: 0.75rem;
           }
           &__left {
             display: flex;
@@ -104,7 +104,7 @@
               font-size: 1rem;
               font-weight: 700;
               color: $primary;
-              opacity: .75;
+              opacity: 0.75;
               font-family: $font-secondary;
             }
             p {
@@ -240,18 +240,33 @@
           display: none;
         }
 
-        img {
+        &__image {
           position: relative;
           width: 100%;
           height: 100%;
-          object-fit: cover;
-          &::after {
-            position: absolute;
-            content: "";
+          background: $primary;
+          border-radius: 0 30px 0 0;
+          overflow: hidden;
+          img {
             width: 100%;
             height: 100%;
-            background: $primary;
+            position: absolute;
+            object-fit: cover;
+            z-index: 3;
+          }
+          &::after {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            content: "Loading ...";
             z-index: 2;
+            font-weight: 400;
+            font-size: 1.1rem;
+            font-family: $font-primary;
+            color: $light;
+            display: flex;
+            justify-content: center;
+            align-items: center;
           }
         }
       }
