--- a/styles/components/cursor.scss
+++ b/styles/components/cursor.scss
@@ -1,4 +1,4 @@
-.mouse-2 {
+.ring {
   position: fixed;
   top: 0;
   left: 0;
@@ -38,7 +38,7 @@
   //   border-width: 3px;
   // }
 }
-.mouse-1 {
+.dot {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -56,33 +56,17 @@
 
   &.hovered {
     display: none;
-
-    &.mouse-1-special {
-      display: block;
-      width: 50px;
-      height: 50px;
-      border-width: 3px;
-      background-color: rgba(31, 30, 30, 0.3);
-      border: none;
-    }
-  }
-
-  &.mouse-1-special {
-    width: 30px;
-    height: 30px;
-    border: 2px solid $primary;
-    background-color: transparent;
   }
 }
 
 body.dark {
-  .mouse-2 {
+  .ring {
     border-color: $light;
     &.hovered {
       background-color: rgba(255, 255, 255, 0.4);
     }
   }
-  .mouse-1 {
+  .dot {
     background-color: $light;
   }
 }
