--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -156,10 +156,10 @@ body.dark {
   transform: translateY(-50%);
   top: 50%;
   right: 0;
-  transition: .3s ease;
+  transition: .3s e;
   @media screen and (max-width: 640px) {
     top: -130px;
-    transform: translateX(calc(50% + 25px)) rotate(180deg);
+    transform: translateX(calc(50% + 0px)) rotate(180deg);
     right: 50%;
     &:hover{
       top: 0;
