--- a/styles/pages/experience.scss
+++ b/styles/pages/experience.scss
@@ -113,7 +113,7 @@
           }
         }
         &-description {
-          padding: 1rem 0 0.5rem 0;
+          padding: 1rem 0 1rem 0;
           p {
             font-size: 1rem;
             font-weight: 400;
@@ -122,7 +122,24 @@
             font-family: $font-primary;
           }
         }
+        &-stacks {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          flex-wrap: wrap;
+          gap: 4px;
+          button {
+            flex-shrink: 0;
+            background: $light;
+            padding: 4px 10px;
+            border-radius: 20px;
+            color: $primary;
+            border: 1px solid $primary;
+            font-weight: 400;
+          }
+        }
         &-footer {
+          margin-top: 1rem;
           display: flex;
           align-items: center;
           justify-content: flex-end;
@@ -392,6 +409,13 @@ body.dark {
           &-description {
             p {
               color: $light;
+            }
+          }
+          &-stacks {
+            button {
+              background: $primary;
+              color: $light;
+              border-color: $light;
             }
           }
           &-footer {
