--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -122,16 +122,20 @@
   }
   &-right {
     z-index: 2;
-    width: 25%;
-    min-height: 100vh;
-    padding-left: 1.5rem;
+    width: 300px;
+    height: 300px;
+    //width: 25%;
+    //min-height: 100vh;
+    //padding-left: 1.5rem;
+    margin-right: 3rem;
+    margin-top: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
     &__image {
       width: 100%;
       height: 100%;
-      border-radius: 50px 0 0 50px;
+      border-radius: 50%;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -167,6 +171,7 @@
       width: 50%;
       height: 100%;
       min-height: auto;
+      margin: 0;
       &__image {
         border-radius: 0 0 0 50px;
       }
@@ -180,16 +185,17 @@
       padding: 2rem 1rem 8rem 1rem;
     }
     &-right {
-      width: 100%;
-      height: 100%;
-      min-height: 100%;
-      margin-top: 5rem;
-      padding-left: 0;
-      &__image {
-        border-radius: 20px 20px 0 0;
-        img {
-        }
-      }
+      display: none;
+      // width: 100%;
+      // height: 100%;
+      // min-height: 100%;
+      // margin-top: 5rem;
+      // padding-left: 0;
+      // &__image {
+      //   border-radius: 20px 20px 0 0;
+      //   img {
+      //   }
+      // }
     }
   }
 }
@@ -216,7 +222,8 @@ body.dark {
         }
         li {
           span {
-            &:first-child, &:last-child {
+            &:first-child,
+            &:last-child {
               color: $light;
             }
           }
