--- a/styles/pages/about.scss
+++ b/styles/pages/about.scss
@@ -135,6 +135,7 @@
     &__image {
       width: 100%;
       height: 100%;
+      border: 2px solid #cbd5e1;
       border-radius: 50%;
       overflow: hidden;
       display: flex;
